# cookiecutter-conda-python

./: HOW_WE_USE_GITHUB.md  LICENSE  README.md  cookiecutter.json  pytest.ini  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 0_bug.yml  1_feature.yml  epic.yml
hooks/: post_gen_project.py
news/: pyproject
tests/: test_template.py
{{cookiecutter.repo_name}}/: .codacy.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.rst  appveyor.yml  meta.yaml  pyproject.toml  setup.cfg  setup.py
{{cookiecutter.repo_name}}/.circleci/: config.yml
{{cookiecutter.repo_name}}/conda.recipe/: meta.yaml
{{cookiecutter.repo_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  cli.py
{{cookiecutter.repo_name}}/tests/: test_cli.py
{{cookiecutter.repo_name}}/{{cookiecutter.package_name}}/: __main__.py  _version.py  cli.py
